--- a/css/developer.css
+++ b/css/developer.css
@@ -1,11 +1,9 @@
 .card-body {
   margin: 0;
-  width: 100%;
   height: 100%;
   display: flex;
-  /* justify-content: space-around;
-  align-items: center; */
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card-container {
@@ -13,7 +11,6 @@
   width: 250px;
   height: 500px;
   perspective: 250px;
-  background-color: pink;
 }
 
 .card {
@@ -27,37 +24,25 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  /* justify-content: center;
-  align-items: center; */
   backface-visibility: hidden;
 }
 
 .front {
   margin-left: -100px;
-  /*border: 2px solid black;
-  background: url("http://placehold.it/250x250"); */
 }
-
-/* .front:hover {
-  bottom: 2px;
-  left: 2px;
-  box-shadow: 0px 0px 20px 1px #000;
-} */
 
 .back {
   margin-left: -100px;
-  /* border: 2px solid black;
-  background: url("http://placehold.it/100x100"); */
   transform: rotateY(180deg);
+  padding: 10px;
 }
-
-/* .back:hover {
-  bottom: 2px;
-  right: 2px;
-  box-shadow: 0px 0px 20px 1px #000;
-} */
 
 .project-screenshot {
   width: 250px;
+  height: auto;
+}
+
+.github {
+  width: 50px;
   height: auto;
 }
